--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -1,29 +1,40 @@
-name: pre-commit
+# This file is part of the tschm/.config-templates repository
+# (https://github.com/tschm/.config-templates).
+#
+# Workflow: Pre-commit
+# Purpose: This workflow runs pre-commit checks to ensure code quality
+#          and consistency across the codebase. It helps catch issues
+#          like formatting errors, linting issues, and other code quality
+#          problems before they are merged.
+#
+# Trigger: This workflow runs on every push
+#
+# Components:
+#   - 🔍 Run pre-commit checks using reusable action
+
+name: "PRE-COMMIT"
 
 on:
   push:
 
+permissions:
+  contents: read
+
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: "Build the virtual environment for ${{ github.repository }}"
-        uses: cvxgrp/.github/actions/uv/environment@v2.1.1
-
-      - uses: cvxgrp/.github/actions/coverage@v2.1.1
-
-  deptry:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: "Build the virtual environment for ${{ github.repository }}"
-        uses: cvxgrp/.github/actions/uv/environment@v2.1.1
-
-      - uses: cvxgrp/.github/actions/deptry@v2.1.1
-        with:
-          source-folder: 'cvx'
-
   pre-commit:
     runs-on: ubuntu-latest
     steps:
-      - uses: cvxgrp/.github/actions/pre-commit@v2.1.1
+      # Check out the repository code
+      - uses: actions/checkout@v5
+
+      # Use the composite action to render the project
+      - name: Setup the project
+        uses: ./.github/actions/setup-project
+
+      - name: Lint
+        run: |
+          task quality:lint
+
+      - name: Format
+        run: |
+          task quality:fmt
