--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,4 +42,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["cvx"]
+packages = ["src/cvx"]
