--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,8 +24,8 @@ dev = [
 ]
 
 [project.scripts]
-weather = "cvx.cli.weather:main"
-smallest-eigenvalue = "cvx.cli.smallest_eigenvalue:main"
+weather = "cvxcli.weather:main"
+smallest-eigenvalue = "cvxcli.smallest_eigenvalue:main"
 
 [tool.ruff]
 line-length = 120
@@ -42,4 +42,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/cvx"]
+packages = ["src/cvxcli"]
