--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -21,7 +21,7 @@ jobs:
 
       - uses: cvxgrp/.github/actions/deptry@v2.1.1
         with:
-          source-folder: 'src/cvx'
+          source-folder: 'src/cvxcli'
 
   pre-commit:
     runs-on: ubuntu-latest
