--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,10 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/cvxcli"]
+
+[tool.deptry]
+# see https://deptry.com/usage/#pep-621-dev-dependency-groups
+pep621_dev_dependency_groups = ["dev"]
+
+[tool.deptry.package_module_name_map]
+cvxbson = ["cvx.bson"]
