--- a/.rhiza/template.yml
+++ b/.rhiza/template.yml
@@ -1,7 +1,7 @@
 template-repository: jebel-quant/rhiza
 template-branch: main
 include:
-- .github
+- .github/workflows
 - tests
 - .editorconfig
 - .gitignore
@@ -13,6 +13,7 @@ include:
 - pytest.ini
 - book
 - .rhiza
+- conftest.json
 exclude:
 - .github/workflows/docker.yml
 - .github/workflows/devcontainer.yml
