--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,8 @@ dev = [
     "pytest-cov>=6.0.0",
     "pytest>=8.3.3",
     "pre-commit>=4.0.1",
-    "mock"
+    "mock",
+    "python-dotenv"
 ]
 
 [project.scripts]
