--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 description = "Simple command line app demo"
 readme = "README.md"
 authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
     "fire>=0.7.0",
     "requests>=2.32.3",
@@ -16,6 +16,10 @@ repository = "https://github.com/cvxgrp/cvxcli"
 [dependency-groups]
 dev = [
     "mock",
+    "pandas>=2.3",
+    "numpy>=2.4",
+    "plotly>=6.5",
+    "marimo>=0.18.4",
 ]
 
 [project.scripts]
